src/objects/Site__c.object
<CustomObject>
    <description>This represents a Salesforce.com Site or Community, but does not actually control the availability of a Site.</description>
    <fields>
        <fullName>Default_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Page the site will default to, when a user logs on to the site Domain</description>
        <inlineHelpText>The Page the site will default to, when a user logs on to the site Domain</inlineHelpText>
        <label>Site Homepage</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>The site URL</description>
        <externalId>true</externalId>
        <inlineHelpText>The site URL</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GA_Account__c</fullName>
        <description>Google Analytics Account #.</description>
        <externalId>true</externalId>
        <inlineHelpText>Google Analytics Account #.</inlineHelpText>
        <label>GA Account #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Domain__c</fullName>
        <label>GA Domain</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GA_Script__c</fullName>
        <description>Allows user to select the correct GA script for the web domain.</description>
        <inlineHelpText>Legacy script starts with &quot;var _gaq&quot;. Modern script starts with &quot;(function(i,s,o,g,r,a,m)&quot;.</inlineHelpText>
        <label>GA Script</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Modern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Last_Published_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Last Published Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logo_Alt_Text__c</fullName>
        <description>The 508 Compliant text for the Site Logo.</description>
        <inlineHelpText>What is the 508 Compliant text for this Site&apos;s Logo?</inlineHelpText>
        <label>Logo Alt Text</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Footer__c</fullName>
        <label>Required Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Search_URL__c</fullName>
        <description>The Search API endpoint</description>
        <label>Search URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_CSS__c</fullName>
        <description>The location of the style used by the site</description>
        <externalId>true</externalId>
        <inlineHelpText>The location of the style used by the site</inlineHelpText>
        <label>Site Colors</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Logo__c</fullName>
        <description>The Logo that is displayed on the top left corner of the page</description>
        <externalId>true</externalId>
        <inlineHelpText>The Logo that is displayed on the top left corner of the page</inlineHelpText>
        <label>Site Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slogan__c</fullName>
        <description>The &quot;Tagline&quot; that will be displayed beneath the Site Logo</description>
        <inlineHelpText>The &quot;Tagline&quot; that will be displayed beneath the Site Logo</inlineHelpText>
        <label>Tagline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Name that will be displayed on the browser tab</description>
        <inlineHelpText>Name that will be displayed on the browser tab</inlineHelpText>
        <label>Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseAsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseAsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualForce_Redirect__c</fullName>
        <description>VisualForce Page to use as the homepage instead of the homepage Page record.</description>
        <label>VisualForce Redirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>favicon__c</fullName>
        <label>Site Favicon</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSearchEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Search utility turned on for the Site Template for this Site?</description>
        <inlineHelpText>Turn on the Search utility for the Site?</inlineHelpText>
        <label>isSearchEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Site_CSS__c</columns>
        <columns>Site_Logo__c</columns>
        <columns>UseAsDefault__c</columns>
        <columns>isSearchEnabled__c</columns>
        <columns>Disable_Login__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>